--- a/style/section-contacts.css
+++ b/style/section-contacts.css
@@ -69,11 +69,11 @@
 
 /* ----------------- */
 
-.contacts__contacts .container{
+/* .contacts__contacts .container{
     max-width: 700px;
     margin: 0 auto;
-    /* background-color: rgb(110, 110, 21); */
-}
+    background-color: rgb(110, 110, 21);
+} */
 /* PINK */
 
 .contacts__pink{
@@ -81,6 +81,7 @@
     flex-direction: column;
     padding-top: 237px;
     padding-left: 120px;
+    padding-right: 300px;
 }
 .pink__h3{
     font-family: 'Jost';
@@ -105,7 +106,8 @@
     border: 1px solid #FFFFFF;
     backdrop-filter: blur(2px);
     background: rgba(0, 0, 0, 0.02);
-    width: 526px;
+    /* width: 526px; */
+    width: 100%;
     height: 50px;
     padding-left: 15px;
     padding-top: 16.5px;
@@ -170,4 +172,12 @@
 .pink__input-btn:hover{
     background-color: white !important;
     color: #605294;
+}
+
+/* --------- MEDIA ------------ */
+
+@media (max-width:1466px) {
+    .contacts__pink{
+        padding-right: 100px;
+    }
 }
