--- a/style/section-wtf.css
+++ b/style/section-wtf.css
@@ -1,15 +1,12 @@
 .section-wtf{
     padding-top: 137px;
     padding-bottom: 276px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-image: url(../img/wtf/mountains.svg);
     background-repeat: no-repeat;
     background-position: bottom;
 }
 .wtf__text-above{
-    /* margin: 0 auto; */
+    margin: 0 auto;
     margin-bottom: 112px;
     max-width: 663px;
     font-family: 'Montserrat';
@@ -21,8 +18,8 @@
     color: #222222;
 }
 .wtf__h4{
-    /* max-width: 250px;
-    margin: 0 auto; */
+    max-width: 250px;
+    margin: 0 auto; 
     margin-bottom: 40px;
     
     font-family: 'Montserrat';
@@ -32,6 +29,14 @@
     line-height: 105%;
     color: #361C09;
 }
+.wtf__lengths{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 269px;
+    row-gap: 60px;
+    justify-content: center;
+    margin-top: 85px;
+}
 .wtf__lengths-item{
     font-family: 'Jost';
     font-style: normal;
@@ -39,7 +44,4 @@
     font-size: 102px;
     line-height: 112%;
     color: #361C09;
-}
-.wtf__lengths-item:not(:last-child){
-    margin-right: 269px;
 }
